--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body ng-controller="myCtrl" global-click-trigger>
 <div class="container">
     <div style="margin-left: auto; margin-right: auto; width: 500px; height: 300px; margin-top: 50px; border: 1px solid #ccc" on-global-click="count = count + 1">
-        <p>This box is registered with <code>on-global-click="count++"</code></p>
+        <p>This box is registered with <code>on-global-click="count = count + 1"</code></p>
         <p>Please click outside/inside of the box (body tag), where <code>global-click-trigger</code> registered!</p>
         <p>You clicked outside {{count}} times!</p>
     </div>
