--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="container">
     <div style="margin-left: auto; margin-right: auto; width: 500px; height: 300px; margin-top: 50px; border: 1px solid #ccc" on-global-click="count = count + 1">
         <p>This box is registered with <code>on-global-click="count = count + 1"</code></p>
-        <p>Please click outside/inside of the box (body tag), where <code>global-click-trigger</code> registered!</p>
+        <p>Please click outside of the box (body tag), where <code>global-click-trigger</code> registered!</p>
         <p>You clicked outside {{count}} times!</p>
     </div>
 </div>
