--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
 </head>
-<body ng-controller="myCtrl" global-click-trigger>
+<body style="width: 100%; height: 1000px; padding-top: 50px;" ng-controller="myCtrl" global-click-trigger>
 <div>
-    <div style="margin-left: auto; margin-right: auto; width: 400px; height: 300px; margin-top: 50px; border: 1px solid #ccc" on-global-click="count = count + 1">
+    <div style="margin-left: auto; margin-right: auto; width: 400px; height: 300px; border: 1px solid #ccc" on-global-click="count = count + 1">
         <p>This box is registered with <code>on-global-click="count = count + 1"</code>, which means when not clicking on this element, the code will be executed.</p>
         <p>Please click outside of the box (body tag), where <code>global-click-trigger</code> registered!</p>
         <p>You clicked outside {{count}} times!</p>
